# test_project

./: CMakeLists.txt  PCL2.0-Design.txt
cmake/: pcl_configs.cmake  pcl_find_cuda.cmake  pcl_find_extdeps.cmake  pcl_find_tbb.cmake  pcl_pch_support.cmake  pcl_summary.cmake  pcl_targets.cmake  pcl_template.cmake  pcl_utils.cmake  pcl_version.cmake  pcl_warnings.cmake
cmake/templates/: pcl_config.h.in
infrastructure/io/: CMakeLists.txt
infrastructure/io/include/pcl2/io/: device_source_factory.hpp  driver.hpp  file_source_factory.hpp  grabber.hpp  oni_driver.hpp  parser.hpp  simple_grabber.hpp  source.hpp
infrastructure/io/include/pcl2/io/impl/: oni_device_source.hpp
infrastructure/io/src/: device_source_factory.cpp  driver.cpp  file_source_factory.cpp  oni_device_source.cpp  oni_driver.cpp  parser.cpp
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/pcl2/core/: core.hpp  errors.hpp  infrastructure.hpp  internal.hpp  pcl_exports.hpp  proxy_types.hpp  timer.hpp  types.hpp  version.hpp
modules/core/include/pcl2/core/clouds/: cloud.hpp  clouds.hpp  cuda_cloud.hpp  cuda_clouds.hpp  cuda_kernel_types.hpp
modules/core/include/pcl2/core/cuda/: safe_call.hpp
modules/core/src/: core.cpp  precomp.cpp  precomp.hpp  system.cpp
modules/core/src/clouds/: cloud.cpp  clouds.cpp  cuda_cloud.cpp  cuda_clouds.cpp
modules/core/test/: basic.cpp
modules/kinfu/: CMakeLists.txt
sandbox/: CMakeLists.txt
